# clearml_local_pip

./: .gitignore  pyproject.toml  setup.cfg
requirements/: requirements.txt
src/my_package/: my_code.py
src/my_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/my_package/sub_package/: my_sub_code.py
tools/: clearml_local_pip_test.py
